// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugin Options Combined options should handle multiple options together 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage, defineMessages } from 'react-intl';
export var messages = defineMessages({
    hello: {
        defaultMessage: 'Hello World',
        "id": "App_messages.hello"
    }
});
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "App_myKey",
        defaultMessage: "Hello World"
    }, "myKey");
}
"
`;

exports[`Plugin Options extract_comments option should handle extract_comments option 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "test.427197390",
        // This is a comment
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`Plugin Options filebase option should include filename in id when filebase is true 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "App.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`Plugin Options filebase option should not include filename in id when filebase is false 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "src.components.App.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`Plugin Options include_export_name option should handle include_export_name with default export 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        defaultMessage: 'Hello World',
        "id": "test.messages.hello"
    }
});
"
`;

exports[`Plugin Options include_export_name option should include export name in defineMessages id 1`] = `
"import { defineMessages } from 'react-intl';
export var messages = defineMessages({
    hello: {
        defaultMessage: 'Hello World',
        "id": "test.messages.hello"
    }
});
"
`;

exports[`Plugin Options include_export_name option should not include export name when include_export_name is false 1`] = `
"import { defineMessages } from 'react-intl';
export var messages = defineMessages({
    hello: {
        defaultMessage: 'Hello World',
        "id": "test.hello"
    }
});
"
`;

exports[`Plugin Options module_source_name option should work with custom module source name 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'my-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "test.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`Plugin Options module_source_name option should work with react-intl by default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "test.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`Plugin Options relative_to option should handle relative_to option 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "components.App.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`Plugin Options remove_prefix option should handle remove_prefix with filebase 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "App.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`Plugin Options remove_prefix option should remove regex prefix from filename 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "App.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`Plugin Options remove_prefix option should remove regex prefix from filename with regex object 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "App.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`Plugin Options remove_prefix option should remove string prefix from filename 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "components.App.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`Plugin Options separator option should use custom separator 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "test_427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`Plugin Options separator option should use dot separator by default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "test.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`Plugin Options use_key option should use defaultMessage hash when use_key is false 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "test.427197390",
        defaultMessage: "Hello World"
    }, "myKey");
}
"
`;

exports[`Plugin Options use_key option should use key attribute when use_key is true 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "test.myKey",
        defaultMessage: "Hello World"
    }, "myKey");
}
"
`;

exports[`Plugin Options use_key option should use key in formatMessage when use_key is true 1`] = `
"import { useIntl } from 'react-intl';
function App() {
    var intl = useIntl();
    return intl.formatMessage({
        key: 'myKey',
        defaultMessage: 'Hello World',
        "id": "test.myKey"
    });
}
"
`;
